--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<h1>Experten MeiLe 2022</h1>
 		<ul>
 			<li><a href="Beispiel/index.html">Beispiel</li>
-        <li><a href="Damian/Index.html">Damian</li>
+      <li><a href="Damian/Index.html">Damian</li>
+      <li><a href="Linus/index.html">Linus</li>
+      <li><a href="Ite/index.html">Ite</li>
 		</ul>
 	</body>
 </html>
