--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="Damian/Index.html">Damian</li>
       <li><a href="Linus/index.html">Linus</li>
       <li><a href="Ite/index.html">Ite</li>
+      <li><a href="Mats/index.html">Mats</li>
 		</ul>
 	</body>
 </html>
